--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,45 +10,17 @@ list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
 find_package(ROOT)
 include(${ROOT_USE_FILE})
 include_directories(${ROOT_INCLUDE_DIR})
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/util)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/util)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/karimaki)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+
 include_directories(${F2CPATH}) #findet f2c.h
 
-#kann weg
-#add_library(f2c SHARED ${F2CLIB})
-#SET_TARGET_PROPERTIES(f2c PROPERTIES LINKER_LANGUAGE C)
-#target_link_libraries(f2c ${ROOT_LIBRARIES})
+add_library(f2clib SHARED ${F2CLIB})
+SET_TARGET_PROPERTIES(f2clib PROPERTIES LINKER_LANGUAGE C)
 
-
-#include(${ROOT_USE_FILE})
-#include_directories(${ROOT_INCLUDE_DIR})
-#link_directories(${ROOT_LIBRARY_DIR})
-
-add_library(fits ${KARIPATH}cirpar.c ${KARIPATH}cirparw.c)
-target_link_libraries(fits ${ROOT_LIBRARIES})
-
-target_link_libraries(fits ${ROOT_LIBRARIES})
-#SET_TARGET_PROPERTIES(root PROPERTIES LINKER_LANGUAGE CXX)
-
-
-set(SRC
-        Mu3eRecAcc/recacc_main.cpp
-        Mu3eRecAcc/reconstruction_accuracy.cpp
-        ${KARIPATH}karimaki_hit.cpp
-        ${KARIPATH}fitszw.cpp
-        ${KARIPATH}cirpar.c
-        ${KARIPATH}cirparw.c
-        ${KARIPATH}wrappers.c
-        )
-
-
-
-add_executable(Mu3eRecAcc ${SRC})
-#target_link_libraries(Mu3eRecAcc f2c)
-target_link_libraries(Mu3eRecAcc fits)
-#target_link_libraries(Mu3eRecAcc -L/usr/local/lib/libf2c.a)
-#target_compile_options(Mu3eRecAcc PUBLIC -lf2c -DMAIN)
-add_compile_options("-lf2c" "-DMAIN")
+add_library(karilib SHARED ${KARIPATH}karimaki_hit.cpp ${KARIPATH}fitszw.cpp ${KARIPATH}cirpar.c ${KARIPATH}cirparw.c ${KARIPATH}wrappers.c)
+SET_TARGET_PROPERTIES(karilib PROPERTIES LINKER_LANGUAGE CXX)
 
 
 add_subdirectory(Mu3eRecAcc)
