--- a/Mu3eCosPat/CMakeLists.txt
+++ b/Mu3eCosPat/CMakeLists.txt
@@ -2,9 +2,18 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
 project(CosmicTrigger C CXX)
 set(CMAKE_CXX_STANDARD 14)
 
+#add_library(cospat STATIC processSegsPrototype.cpp SuperPixelHit.cpp PatternEngine.cpp)
+#add_library(util SHARED ../util/plots.h ../util/utilityFunctions.h)
+#SET_TARGET_PROPERTIES(util PROPERTIES LINKER_LANGUAGE C)
+#target_link_libraries(cospat ${ROOT_LIBRARIES})
+
 add_library(patterns SHARED SuperPixelHit.cpp PatternEngine.cpp)
 target_link_libraries(patterns ${ROOT_LIBRARIES})
-#link_directories(${ROOT_LIBRARY_DIR})
 
-add_executable(Mu3eCosPat main.cpp processSegsPrototype.cpp)
+set(SRC main.cpp processSegsPrototype.cpp)
+
+add_executable(Mu3eCosPat ${SRC})
 target_link_libraries(Mu3eCosPat patterns)
+
+#target_link_libraries(Mu3eCosPat ${ROOT_LIBRARIES} f2clib karilib)
+#add_compile_options("-lf2c" "-DMAIN")
