checkpoint in slimData

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(${ROOT_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/util)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/karimaki)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/root)
 
 include_directories(${F2CPATH}) #findet f2c.h
 
@@ -25,4 +26,5 @@ SET_TARGET_PROPERTIES(karilib PROPERTIES LINKER_LANGUAGE CXX)
 
 add_subdirectory(Mu3eRecAcc)
 add_subdirectory(Mu3eCosPat)
+add_subdirectory(Mu3ePreSlimData)
 add_subdirectory(tests)
