--- a/Mu3ePreSlimData/CMakeLists.txt
+++ b/Mu3ePreSlimData/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 14)
 #SET_TARGET_PROPERTIES(util PROPERTIES LINKER_LANGUAGE C)
 #target_link_libraries(cospat ${ROOT_LIBRARIES})
 
-set(SRC main.cpp slimSegsData.cpp ../root/SegsRepresentation.cpp ../root/SlimSegsRepresentation.cpp)
+set(SRC main.cpp slimSegsData.cpp ../root/SegsTreeRead.cpp ../root/SlimSegsTree.cpp)
 
 add_executable(Mu3ePreSlimData ${SRC})
 target_link_libraries(Mu3ePreSlimData ${ROOT_LIBRARIES} f2clib karilib)
