--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(Mu3eRecAcc)
 add_subdirectory(Mu3eCosPat)
 add_subdirectory(Mu3ePreSlimData)
 add_subdirectory(tests)
+add_subdirectory(root)
