--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_subdirectory(Mu3eCosPat)
 add_subdirectory(Mu3ePreSlimData)
 add_subdirectory(tests)
 add_subdirectory(root)
+add_subdirectory(playground)
