changed structure, fixes bug in TDB

--- a/Mu3eCosPat/CMakeLists.txt
+++ b/Mu3eCosPat/CMakeLists.txt
@@ -2,6 +2,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
 project(CosmicTrigger C CXX)
 set(CMAKE_CXX_STANDARD 14)
 
+include_directories(include)
+
 #add_library(cospat STATIC processSegsPrototype.cpp SuperPixelHit.cpp PatternEngineSingle.cpp)
 #add_library(util SHARED ../util/plots.h ../util/utilityFunctions.h)
 #SET_TARGET_PROPERTIES(util PROPERTIES LINKER_LANGUAGE C)
@@ -14,9 +16,17 @@ set(SRC main.cpp processSegsPrototype.cpp)
 add_executable(Mu3eCosPatPrototype ${SRC})
 target_link_libraries(Mu3eCosPatPrototype patterns)
 
-set(SRC2 main.cpp buildCosmicTrajTemplatesScript.cpp ../root/TemplateDatabase.cpp)
-add_executable(Mu3eCosPat ${SRC2})
-target_link_libraries(Mu3eCosPat patterns rootTreeFiles)
+set(SRC2 main_CTbuild.cpp cosmicTemplatesBuild.cpp ../root/TemplateDatabase.cpp)
+add_executable(Mu3eCosPatBuild ${SRC2})
+target_link_libraries(Mu3eCosPatBuild patterns rootTreeFiles)
+
+set(SRC3 main_CTeval.cpp cosmicTemplatesEval.cpp ../root/TemplateDatabase.cpp)
+add_executable(Mu3eCosPatEval ${SRC3})
+target_link_libraries(Mu3eCosPatEval patterns rootTreeFiles)
+
+set(SRC4 main_CTplots.cpp)
+add_executable(Mu3eCosPatPlots ${SRC4})
+target_link_libraries(Mu3eCosPatPlots rootTreeFiles)
 
 #target_link_libraries(Mu3eCosPat ${ROOT_LIBRARIES} f2clib karilib)
 #add_compile_options("-lf2c" "-DMAIN")
