extract BG hits from normal simulation

--- a/Mu3eCTBgAna/CMakeLists.txt
+++ b/Mu3eCTBgAna/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(inc)
 include_directories(src)
 
-set(SRC main.cpp)
+set(SRC main.cpp src/cosmicTemplatesBgEval.cpp)
 add_executable(Mu3eCTBgAna ${SRC})
 target_link_libraries(Mu3eCTBgAna patterns rootTreeFiles)
