--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ SET_TARGET_PROPERTIES(karilib PROPERTIES LINKER_LANGUAGE CXX)
 add_subdirectory(Mu3eRecAcc)
 add_subdirectory(Mu3eCosPat)
 add_subdirectory(Mu3ePreSlimData)
+add_subdirectory(Mu3eCTBgAna)
 add_subdirectory(tests)
 add_subdirectory(root)
 add_subdirectory(playground)
