--- a/Mu3eCTBgAna/CMakeLists.txt
+++ b/Mu3eCTBgAna/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(inc)
 include_directories(src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/root)
 
 set(SRC main.cpp src/cosmicTemplatesBgEval.cpp)
 add_executable(Mu3eCTBg2Ana ${SRC})
@@ -16,3 +17,7 @@ target_link_libraries(Mu3eCTBg3Plots rootTreeFiles)
 set(SRC main_bg_combinatorics.cpp src/bgDataCombinatorics.cpp ../root/BackgroundDataFile.cpp)
 add_executable(Mu3eCTBg1ComputeCmbntcs ${SRC})
 target_link_libraries(Mu3eCTBg1ComputeCmbntcs patterns rootTreeFiles)
+
+set(SRC2 main_bgroc.cpp src/cosmicTemplatesBgROC.cpp)
+add_executable(Mu3eCTBg4ROC ${SRC2})
+target_link_libraries(Mu3eCTBg4ROC rootTreeFiles)
