small fixes, renamed executables

--- a/Mu3eCosPat/CMakeLists.txt
+++ b/Mu3eCosPat/CMakeLists.txt
@@ -12,21 +12,21 @@ include_directories(include)
 add_library(patterns SHARED SuperPixelHit.cpp PatternEngineSingle.cpp TemplateBank.cpp TemplateData.cpp PatternEngine.cpp SPCalculations.cpp ../root/TemplateDatabaseFile.cpp)
 target_link_libraries(patterns ${ROOT_LIBRARIES})
 
-set(SRC main.cpp cosmicTemplatesBuild.cpp makePlots.cpp)
-add_executable(Mu3eCosPatBuildMany ${SRC})
-target_link_libraries(Mu3eCosPatBuildMany patterns rootTreeFiles)
+set(SRC main_CTbuildMany.cpp cosmicTemplatesBuild.cpp cosmicTemplatesTrainingPlots.cpp)
+add_executable(Mu3eCosPat1BuildMany ${SRC})
+target_link_libraries(Mu3eCosPat1BuildMany patterns rootTreeFiles)
 
 set(SRC2 main_CTbuild.cpp cosmicTemplatesBuild.cpp ../root/TemplateDatabaseFile.cpp)
 add_executable(Mu3eCosPatBuild ${SRC2})
 target_link_libraries(Mu3eCosPatBuild patterns rootTreeFiles)
 
-set(SRC3 main_CTeval.cpp cosmicTemplatesEval.cpp ../root/TemplateDatabaseFile.cpp)
-add_executable(Mu3eCosPatEval ${SRC3})
-target_link_libraries(Mu3eCosPatEval patterns rootTreeFiles)
+set(SRC3 main_CTload.cpp cosmicTemplatesLoad.cpp ../root/TemplateDatabaseFile.cpp)
+add_executable(Mu3eCosPatLoad ${SRC3})
+target_link_libraries(Mu3eCosPatLoad patterns rootTreeFiles)
 
-set(SRC4 main_CTplots.cpp makePlots.cpp)
-add_executable(Mu3eCosPatPlots ${SRC4})
-target_link_libraries(Mu3eCosPatPlots rootTreeFiles)
+set(SRC4 main_CTplots.cpp cosmicTemplatesTrainingPlots.cpp)
+add_executable(Mu3eCosPat2Plots ${SRC4})
+target_link_libraries(Mu3eCosPat2Plots rootTreeFiles)
 
 #target_link_libraries(Mu3eCosPat ${ROOT_LIBRARIES} f2clib karilib)
 #add_compile_options("-lf2c" "-DMAIN")
