--- a/CTPlottingScripts/CMakeLists.txt
+++ b/CTPlottingScripts/CMakeLists.txt
@@ -13,6 +13,14 @@ set(SRC3 main_bgAnaEffSPcount.cpp src/bgAnaPlots_EffSPcount.cpp)
 add_executable(PlotsBgAnaSPcount ${SRC3})
 target_link_libraries(PlotsBgAnaSPcount rootTreeFiles)
 
+set(SRC6 main_bgAnaSPC.cpp src/bgAnaPlots_EffSPC.cpp)
+add_executable(PlotsBgAnaSPCdatapoints ${SRC6})
+target_link_libraries(PlotsBgAnaSPCdatapoints rootTreeFiles)
+
+set(SRC7 main_bgAnaSPR.cpp src/bgAnaPlots_EffSPR.cpp)
+add_executable(PlotsBgAnaSPRdatapoints ${SRC7})
+target_link_libraries(PlotsBgAnaSPRdatapoints rootTreeFiles)
+
 set(SRC5 main_bgAnaEffBeam.cpp src/bgAnaPots_EffBeamRate.cpp)
 add_executable(PlotsBgAnaEffBeam ${SRC5})
 target_link_libraries(PlotsBgAnaEffBeam rootTreeFiles)
