--- a/CTPreSlimData/CMakeLists.txt
+++ b/CTPreSlimData/CMakeLists.txt
@@ -12,3 +12,9 @@ set(SRC main.cpp slimSegsDataScript.cpp ../root/SegsTreeRead.cpp ../root/SlimSeg
 add_executable(Mu3ePreSlimData ${SRC})
 target_link_libraries(Mu3ePreSlimData ${ROOT_LIBRARIES} f2clib karilib)
 add_compile_options("-lf2c" "-DMAIN")
+
+set(SRC PlotSlimSegsTrackVars.cpp ../root/SegsTreeRead.cpp ../root/SlimSegsTree.cpp)
+
+add_executable(Mu3ePreSlimPlot ${SRC})
+target_link_libraries(Mu3ePreSlimPlot ${ROOT_LIBRARIES} f2clib karilib)
+add_compile_options("-lf2c" "-DMAIN")
