--- a/CTBgAna/CMakeLists.txt
+++ b/CTBgAna/CMakeLists.txt
@@ -5,18 +5,10 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(inc)
 include_directories(src)
 
-set(SRC main.cpp src/cosmicTemplatesBgAna.cpp ../CTCosPatTrain/cosmicTemplatesEfficiency.cpp)
-add_executable(Mu3eCTBg2Ana ${SRC})
-target_link_libraries(Mu3eCTBg2Ana patterns rootTreeFiles)
+set(SRC main_CTBkgAnaMany.cpp src/cosmicTemplatesBgAna.cpp ../CTCosPatTrain/src/getCosmicSIDtracks.cpp)
+add_executable(EvalBkgDBParamCombinations ${SRC})
+target_link_libraries(EvalBkgDBParamCombinations patterns rootTreeFiles)
 
-set(SRC main_manybgdata.cpp src/cosmicTemplatesBgAna.cpp ../CTCosPatTrain/cosmicTemplatesEfficiency.cpp)
-add_executable(Mu3eCTBg2MultiAna ${SRC})
-target_link_libraries(Mu3eCTBg2MultiAna patterns rootTreeFiles)
-
-set(SRC main_bgeffplot.cpp src/cosmicTemplatesBgPlots.cpp)
-add_executable(Mu3eCTBg3Plots ${SRC})
-target_link_libraries(Mu3eCTBg3Plots rootTreeFiles)
-
-set(SRC main_CTBkgAnaDatapoints.cpp src/cosmicTemplatesBgAna.cpp ../CTCosPatTrain/cosmicTemplatesEfficiency.cpp)
-add_executable(Mu3eCTBg2AnaDatapoints ${SRC})
-target_link_libraries(Mu3eCTBg2AnaDatapoints patterns rootTreeFiles)
+set(SRC main_CTBkgAnaDatapoints.cpp src/cosmicTemplatesBgAna.cpp ../CTCosPatTrain/src/getCosmicSIDtracks.cpp)
+add_executable(EvalBkgDBMulti ${SRC})
+target_link_libraries(EvalBkgDBMulti patterns rootTreeFiles)
