Readme, Cmake fixes, renaming

--- a/RecAccCheck/CMakeLists.txt
+++ b/RecAccCheck/CMakeLists.txt
@@ -6,5 +6,5 @@ set(SRC recacc_main.cpp reconstructionAccuracyScript.cpp reconstruction_accuracy
 add_executable(RecAccCheck ${SRC})
 target_link_libraries(RecAccCheck ${ROOT_LIBRARIES} f2clib karilib)
 add_compile_options("-lf2c" "-DMAIN")
-#target_compile_options(Mu3eRecAcc PUBLIC -lf2c -DMAIN)
+#target_compile_options(RecAccCheck PUBLIC -lf2c -DMAIN)
 
